# storage/api-docs/api-docs.json
@@ -205,6 +205,62 @@
                 }
             }
         },
+        "/SY01400/menu_side": {
+            "post": {
+                "tags": [
+                    "Menu"
+                ],
+                "summary": "Mostrar menu lateral.",
+                "description": "Returns project data",
+                "operationId": "App\\Http\\Controllers\\SY01400Controller::menu_side",
+                "responses": {
+                    "200": {
+                        "description": "Successful operation",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/MC40200"
+                                }
+                            }
+                        }
+                    },
+                    "default": {
+                        "description": "Ha ocurrido un error."
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    }
+                }
+            }
+        },
+        "/SY01400/cards": {
+            "post": {
+                "tags": [
+                    "Menu"
+                ],
+                "summary": "Mostrar menu fichas.",
+                "description": "Returns project data",
+                "operationId": "App\\Http\\Controllers\\SY01400Controller::cards",
+                "responses": {
+                    "200": {
+                        "description": "Successful operation",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/MC40200"
+                                }
+                            }
+                        }
+                    },
+                    "default": {
+                        "description": "Ha ocurrido un error."
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    }
+                }
+            }
+        },
         "/generic/getNextNoteIndex/": {
             "get": {
                 "tags": [
